@@ -3,12 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>268 142 480 240 0 0 1280 1002 </string>
+	<string>572 690 480 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
 	<string>349.0</string>
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>32</integer>
+		<integer>815</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>7D24</string>
