@@ -108,7 +108,7 @@
 
 - (NSDictionary *) globalProfile;
 - (BOOL) isGlobalProfile: (NSString *)profileName;
-- (void) addProfileWithName: (NSString *) aString;
+- (void) addProfileWithName: (NSString *) aString copyProfile: (NSString *) profileName;
 - (void) deleteProfileWithName: (NSString *) aString;
 - (int) numberOfEntriesInProfile: (NSString *) profileName;
 
