@@ -1,3 +1,8 @@
+2004-03-07  ujwal
+
+	* Checking in new preferences UI. Backend code for Color and 
+	  Terminal, and Bookmark editor still needs to be done.
+
 2004-03-06  fabian
 
 	* Fixed a bug in VT100Screen that causes crashes
